--- a/packages/block-editor/src/components/editor-skeleton/style.scss
+++ b/packages/block-editor/src/components/editor-skeleton/style.scss
@@ -105,6 +105,7 @@ html.block-editor-editor-skeleton__html-container {
 	bottom: 0;
 	left: 0;
 	background: $white;
+	color: $dark-gray-primary;
 
 	// On Mobile the header is fixed to keep HTML as scrollable.
 	@include break-medium() {
@@ -120,6 +121,7 @@ html.block-editor-editor-skeleton__html-container {
 	height: auto;  // Keep the height flexible.
 	border-bottom: $border-width solid $light-gray-500;
 	z-index: z-index(".block-editor-editor-skeleton__header");
+	color: $dark-gray-primary;
 
 	// On Mobile the header is sticky.
 	position: sticky;
@@ -135,8 +137,8 @@ html.block-editor-editor-skeleton__html-container {
 .block-editor-editor-skeleton__footer {
 	height: auto;  // Keep the height flexible.
 	flex-shrink: 0;
-	overflow: auto;
 	border-top: $border-width solid $light-gray-500;
+	color: $dark-gray-primary;
 
 	// On Mobile the footer is hidden
 	display: none;
@@ -153,6 +155,7 @@ html.block-editor-editor-skeleton__html-container {
 	left: auto;
 	right: 0;
 	width: $sidebar-width;
+	color: $dark-gray-primary;
 
 	&:focus {
 		top: auto;
