--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -17,11 +17,37 @@ $block-inserter-search-height: 38px;
 }
 
 .block-editor-inserter__popover > .components-popover__content {
-	padding: 0;
+	padding: 0 0 $border-width 0;
 
 	@include break-medium {
 		overflow-y: visible;
 		height: $block-inserter-content-height + $block-inserter-tabs-height + $block-inserter-search-height;
+	}
+}
+
+.block-editor-inserter__toggle.components-button {
+	display: inline-flex;
+	align-items: center;
+	cursor: pointer;
+	border: none;
+	outline: none;
+	padding: 0;
+	transition: color 0.2s ease;
+	@include reduce-motion("transition");
+
+	&:hover:not(:disabled) {
+		background: color($theme-color shade(10%));
+		color: $white;
+	}
+
+	&:active:not(:disabled) {
+		background: color($theme-color shade(20%));
+		border-color: color($theme-color shade(20%));
+		color: $white;
+	}
+
+	&:focus:not(:disabled) {
+		box-shadow: inset 0 0 0 1px $white, 0 0 0 2px color($theme-color);
 	}
 }
 
