--- a/packages/editor/src/components/post-saved-state/style.scss
+++ b/packages/editor/src/components/post-saved-state/style.scss
@@ -1,9 +1,9 @@
 .editor-post-saved-state {
 	display: flex;
 	align-items: center;
-	width: $icon-button-size - 8px;
+	width: $icon-button-size - $grid-unit-10;
 	padding: #{ $grid-unit-05 * 3 } $grid-unit-05;
-	color: $dark-gray-500;
+	color: $medium-gray-text;
 	overflow: hidden;
 	white-space: nowrap;
 
@@ -23,9 +23,4 @@
 			margin-right: $grid-unit-05;
 		}
 	}
-}
-
-// This needs specificity to override inherited styles.
-.edit-post-header .edit-post-header__settings .components-button.editor-post-save-draft {
-	margin: 0;
 }
