--- a/packages/block-library/src/editor.scss
+++ b/packages/block-library/src/editor.scss
@@ -32,6 +32,7 @@
 @import "./quote/editor.scss";
 @import "./rss/editor.scss";
 @import "./search/editor.scss";
+@import "./separator/editor.scss";
 @import "./shortcode/editor.scss";
 @import "./social-link/editor.scss";
 @import "./social-links/editor.scss";
