--- a/packages/base-styles/_variables.scss
+++ b/packages/base-styles/_variables.scss
@@ -58,7 +58,7 @@ $grid-size-xlarge: 24px;
  */
 
 $panel-padding: 16px;
-$header-height: 56px;
+$header-height: 60px;
 $panel-header-height: 50px;
 $admin-bar-height: 32px;
 $admin-bar-height-big: 46px;
@@ -74,9 +74,7 @@ $spinner-size: 18px;
  * Shadows.
  */
 
-$shadow-popover: 0 3px 30px rgba($dark-gray-900, 0.1);
-$shadow-toolbar: 0 2px 10px rgba($dark-gray-900, 0.1), 0 0 2px rgba($dark-gray-900, 0.1);
-$shadow-below-only: 0 5px 10px rgba($dark-gray-900, 0.05), 0 2px 2px rgba($dark-gray-900, 0.05);
+$shadow-popover: 0 2px 6px rgba($black, 0.05);
 $shadow-modal: 0 3px 30px rgba($dark-gray-900, 0.2);
 
 
@@ -94,10 +92,9 @@ $widget-area-width: 700px;
  */
 
 $border-width: 1px;
-$block-controls-height: 36px;
 $icon-button-size: 36px;
-$icon-button-size-small: 24px;
 $inserter-tabs-height: 36px;
+$icon-button-size-small: 24px;
 $block-toolbar-height: $grid-unit-60;
 $resize-handler-size: 15px;
 $resize-handler-container-size: $resize-handler-size + ($grid-unit-05 * 2); // Make the resize handle container larger so there's a larger grabbable area.
