--- a/packages/block-library/src/classic/editor.scss
+++ b/packages/block-library/src/classic/editor.scss
@@ -294,13 +294,14 @@ div[data-type="core/freeform"] {
 	// block is empty or loading and the placeholder should be displayed.
 	display: none;
 	width: auto;
-	margin: 0 #{ -$block-padding };
+	margin: 0;
 	position: sticky;
 	z-index: z-index(".block-library-classic__toolbar");
-	top: $block-padding;
-	transform: translateY(-$block-padding);
+	top: $grid-unit-10;
 	border: $border-width solid $light-gray-500;
 	border-bottom: none;
+	border-radius: $radius-block-ui;
+	margin-bottom: $grid-unit-10;
 
 	// On mobile, toolbars go edge to edge.
 	padding: 0;
