--- a/packages/base-styles/_mixins.scss
+++ b/packages/base-styles/_mixins.scss
@@ -214,35 +214,26 @@
 }
 
 @mixin block-style__hover {
-	background: $light-gray-200;
-	color: $dark-gray-900 !important;
+	border-color: $theme-color;
+	color: $theme-color !important;
 }
 
 @mixin block-style__focus() {
-	color: $dark-gray-900;
-	box-shadow: 0 0 0 1px $white, 0 0 0 3px $blue-medium-500;
+	box-shadow: inset 0 0 0 1px $white, 0 0 0 2px $theme-color;
 
 	// Windows High Contrast mode will show this outline, but not the box-shadow.
 	outline: 2px solid transparent;
 }
 
 @mixin block-style__is-active() {
-	color: $dark-gray-900;
-	box-shadow: inset 0 0 0 2px $dark-gray-500;
+	color: $white;
+	background: $dark-gray-primary;
 
 	// Windows High Contrast mode will show this outline, but not the box-shadow.
 	outline: 2px solid transparent;
 	outline-offset: -2px;
 }
 
-@mixin block-style__is-active-focus() {
-	color: $dark-gray-900;
-	box-shadow: 0 0 0 1px $white, 0 0 0 3px $blue-medium-500, inset 0 0 0 2px $dark-gray-500;
-
-	// Windows High Contrast mode will show this outline, but not the box-shadow.
-	outline: 4px solid transparent;
-	outline-offset: -4px;
-}
 
 /**
  * Applies editor left position to the selector passed as argument
