--- a/packages/block-editor/src/components/block-navigation/style.scss
+++ b/packages/block-editor/src/components/block-navigation/style.scss
@@ -92,8 +92,8 @@ $tree-item-height: 36px;
 
 	&.is-selected,
 	&.is-selected:focus {
-		color: $dark-gray-700;
-		background: $light-gray-300;
+		color: $white;
+		background: $dark-gray-primary;
 	}
 }
 
