--- a/packages/block-editor/src/components/media-placeholder/style.scss
+++ b/packages/block-editor/src/components/media-placeholder/style.scss
@@ -29,15 +29,6 @@
 
 .block-editor-media-placeholder__button {
 	margin-bottom: 0.5rem;
-
-	.dashicon {
-		vertical-align: middle;
-		margin-bottom: 3px;
-	}
-
-	&:hover {
-		color: $dark-gray-800;
-	}
 }
 
 .block-editor-media-placeholder__cancel-button.is-link {
@@ -46,20 +37,10 @@
 }
 
 .block-editor-media-placeholder.is-appender {
-	min-height: 100px;
+	min-height: 0;
 
 	&:hover {
 		cursor: pointer;
-		border: 1px solid $theme-color;
+		box-shadow: 0 0 0 1px $theme-color;
 	}
-
-	.block-editor-media-placeholder__upload-button {
-		margin-right: $grid-unit-05;
-		&.components-button:hover,
-		&.components-button:focus {
-			box-shadow: none;
-			border: $border-width solid $dark-gray-500;
-		}
-	}
-
 }
